--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ build client:
     - ls -al
     - '[ -f ./client.tar ] && docker load --input client.tar'
     - docker build -t client:latest -f client/Dockerfile --cache-from client:latest --cache-from node:12-slim ./client
-    - 'docker run -v "$PWD":/app/server/dist client:latest yarn build:prod'
+    - 'docker run -v dist:/app/server/dist client:latest yarn build:prod'
     - docker save client:latest > client.tar
 
 build api:
