--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,6 +6,7 @@ RUN yarn
 COPY src ./src
 COPY tsconfig.json .
 COPY webpack.config.js .
+COPY webpack.config.prod.js .
 COPY babel.config.js .
 COPY devServer.js .
 EXPOSE 4000
