Added client asset build

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -33,8 +33,9 @@ EXPOSE 9229
 # RUN ls -al
 # RUN yarn build:prod
 
-# FROM base as prod
+FROM base as prod
 # COPY --from=client-build /client/dist/ /app/server/dist
+COPY ./dist server/dist
 
 ARG CIRCLE_SHA1
 ARG CIRCLE_BUILD_NUM
