--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,8 @@ build client:
     - ls -al
     - '[ -f ./client.tar ] && docker load --input client.tar'
     - docker build -t client:latest -f client/Dockerfile --cache-from client:latest --cache-from node:12-slim ./client
-    - 'docker run -v dist:/app/server/dist client:latest yarn build:prod'
+    - docker run -v "$PWD/dist":/app/dist -e "ASSET_CDN_DOMAIN=cdn.carpe.dalan.dev" client:latest yarn build:prod
+    - ls -al
     - docker save client:latest > client.tar
 
 build api:
