Added some logging

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -36,6 +36,7 @@ EXPOSE 9229
 FROM base as prod
 # COPY --from=client-build /client/dist/ /app/server/dist
 COPY dist/ server/dist
+COPY .env.example .env
 
 ENV NODE_ENV=production
 
