--- a/imageResizer/layer/nodejs/package.json
+++ b/imageResizer/layer/nodejs/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "docker run -v \"$PWD\":/var/task lambci/lambda:build-nodejs8.10 npm install sharp sqip knex exif-parser pg aws-sdk",
+    "build": "./install.sh",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "cp ../shared/constants.js . && zip -r -X ../imageResizer.zip index.js constants.js && cd .. && aws lambda update-function-code --function-name image-processor --zip-file fileb://imageResizer.zip --profile carpedalan-prod",
     "stage": "cp ../shared/constants.js . && zip -r -X ../imageResizer.zip * && cd .. && aws lambda update-function-code --function-name carpedalan-west --zip-file fileb://imageResizer.zip --profile carpedev --region us-west-2"
@@ -12,11 +12,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.551.0",
+    "aws-sdk": "^2.613.0",
     "exif-parser": "^0.1.12",
     "knex": "^0.19.5",
-    "pg": "^7.12.1",
-    "sharp": "^0.23.1",
+    "pg": "^7.18.1",
+    "sharp": "^0.23.4",
     "sqip": "^0.3.3"
   }
 }
