--- a/.eslintrc
+++ b/.eslintrc
@@ -31,6 +31,84 @@
         "jest/valid-expect": "off",
         "jest/expect-expect": "off"
       } 
+    }, {
+      "files": ["*.ts", "*.tsx"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "project": "./client/tsconfig.json",
+        "tsconfigRootDir": "."
+      },
+      "env": {
+        "browser": true,
+        "jest/globals": true
+      },
+      "plugins": ["@typescript-eslint", "react-hooks", "jest", "prettier"],
+      "extends": [
+        "airbnb",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:import/typescript",
+        "plugin:prettier/recommended",
+        "prettier/@typescript-eslint"
+    
+      ],
+      "settings": {
+        "import/resolver": {
+    
+          // use <root>/path/to/folder/tsconfig.json
+          "typescript": {
+            "directory": "./client"
+          },
+    
+        },
+      },
+      "rules": {
+        /**
+         * @description rules of eslint official
+         */
+        /**
+         * @bug https://github.com/benmosher/eslint-plugin-import/issues/1282
+         * "import/named" temporary disable.
+         */
+        "import/named": "off",
+        /**
+         * @bug?
+         * "import/export" temporary disable.
+         */
+        "import/export": "off",
+        "import/prefer-default-export": "off", // Allow single Named-export
+        "no-unused-expressions": ["warn", {
+          "allowShortCircuit": true,
+          "allowTernary": true
+        }], // https://eslint.org/docs/rules/no-unused-expressions
+    
+        /**
+         * @description rules of @typescript-eslint
+         */
+        "@typescript-eslint/prefer-interface": "off", // also want to use "type"
+        "@typescript-eslint/explicit-function-return-type": "off", // annoying to force return type
+    
+        /**
+         * @description rules of eslint-plugin-react
+         */
+        "react/jsx-filename-extension": ["warn", {
+          "extensions": [".jsx", ".tsx"]
+        }], // also want to use with ".tsx"
+        "react/prop-types": "off", // Is this incompatible with TS props type?
+    
+        /**
+         * @description rules of eslint-plugin-react-hooks
+         */
+        "react-hooks/rules-of-hooks": "error",
+    
+        /**
+         * @description rules of eslint-plugin-prettier
+         */
+        "prettier/prettier": [
+          "error", {
+            "singleQuote": true,
+          }
+        ]
+      }
     }
   ]
 }
