--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,6 @@
     "statusBar.foreground": "#e7e7e7"
   },
   "peacock.color": "#201826",
-  "debug.node.autoAttach": "on"
+  "debug.node.autoAttach": "on",
+  "eslint.enable": true
 }
