--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,14 +1,14 @@
 FROM node:12-slim AS base
-WORKDIR /app
-COPY yarn.lock .
-COPY package.json .
+WORKDIR /app/client
+COPY client/yarn.lock .
+COPY client/package.json .
 RUN yarn
-COPY src ./src
-COPY tsconfig.json .
-COPY webpack.config.js .
-COPY webpack.config.prod.js .
-COPY babel.config.js .
-COPY devServer.js .
-EXPOSE 4000
-
+COPY client/src ./src
+COPY client/tsconfig.json .
+COPY client/webpack.config.js .
+COPY client/webpack.config.prod.js .
+COPY client/babel.config.js .
+COPY client/devServer.js .
+COPY client/.eslintrc.js .
+COPY ./.eslint-ts-base.js /app/
 CMD ["node", "devServer"]
