--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,15 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "@testing-library/jest-dom": "^5.1.1",
+    "axios": "^0.19.2",
     "compression-webpack-plugin": "^3.1.0",
     "date-fns": "2.9.0",
+    "debug": "^4.1.1",
     "lodash": "^4.17.15",
+    "qs": "^6.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-is": "^16.12.0",
@@ -39,8 +44,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.8.3",
     "@hot-loader/react-dom": "^16.11.0",
     "@testing-library/react": "^9.4.0",
     "@types/debug": "^4.1.5",
@@ -68,23 +76,31 @@
     "@types/webpack-hot-middleware": "^2.25.0",
     "@typescript-eslint/eslint-plugin": "^2.19.0",
     "@typescript-eslint/parser": "^2.19.0",
-    "axios": "^0.19.2",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
     "babel-preset-jest": "^25.1.0",
     "compression-webpack-plugin": "^3.1.0",
-    "debug": "^4.1.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
     "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jest": "^23.7.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.3.0",
+    "eslint-webpack-plugin": "^0.1.0",
     "express": "^4.17.1",
     "fork-ts-checker-webpack-plugin": "^4.0.3",
     "happypack": "^5.0.1",
     "jest": "^25.1.0",
-    "prettier": "1.19.1",
+    "prettier": "^1.19.1",
+    "prettier-eslint": "^9.0.1",
     "react-hot-loader": "^4.12.19",
     "ts-jest": "^25.2.0",
     "typedoc": "^0.16.9",
