--- a/infra/tsconfig.json
+++ b/infra/tsconfig.json
@@ -1,16 +1,24 @@
 {
-    "compilerOptions": {
-        "strict": true,
-        "outDir": "bin",
-        "target": "es2016",
-        "module": "commonjs",
-        "moduleResolution": "node",
-        "sourceMap": true,
-        "experimentalDecorators": true,
-        "pretty": true,
-        "noFallthroughCasesInSwitch": true,
-        "noImplicitReturns": true,
-        "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true
-    }
+  "compilerOptions": {
+      "outDir": "bin",
+      "target": "es6",
+      "lib": [
+          "es6"
+      ],
+      "module": "commonjs",
+      "moduleResolution": "node",
+      "declaration": true,
+      "sourceMap": true,
+      "stripInternal": true,
+      "experimentalDecorators": true,
+      "pretty": true,
+      "noFallthroughCasesInSwitch": true,
+      "noImplicitAny": true,
+      "noImplicitReturns": true,
+      "forceConsistentCasingInFileNames": true,
+      "strictNullChecks": true
+  },
+  "files": [
+      "index.ts"
+  ]
 }
