Added lint to gitlab

--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "license": "ISC",
   "lint-staged": {
     "*.{js,jsx}": [
-      "eslint --fix",
-      "git add"
+      "yarn lint --fix"
     ]
   },
   "devDependencies": {
