--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,7 @@ variables:
 
 stages:
   - build
-  # - test
+  - test
   - deploy
 
 default:
@@ -97,48 +97,57 @@ build layer deps:
     paths:
       - imageResizer/layer/
   
-# e2e:
-#   stage: test
-#   before_script:
-#     - echo 'Skipping login'
-#   services:
-#     - docker:18.06.3-dind
-#   dependencies:
-#     - build client
-#     - build api
-#   script: 
-#     # - yarn unit
-#     # - yarn integration
-#     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
-#     - docker load --input api.tar
-#     - docker load --input client.tar
-#     - yarn e2e
-# integration:
-#   stage: test
-#   before_script:
-#     - echo 'Skipping login'
-#   services:
-#     - docker:18.06.3-dind
-#   dependencies:
-#     - build api
-#   script: 
-#     # - yarn unit
-#     # - yarn integration
-#     - docker load --input api.tar
-#     - yarn integration
-# unit:
-#   stage: test
-#   before_script:
-#     - echo 'Skipping login'
-#   services:
-#     - docker:18.06.3-dind
-#   dependencies:
-#     - build client
-#   script: 
-#     # - yarn unit
-#     # - yarn integration
-#     - docker load --input client.tar
-#     - yarn unit
+e2e:
+  stage: test
+  before_script:
+    - echo 'Skipping login'
+  services:
+    - docker:18.06.3-dind
+  dependencies:
+    - build client
+    - build api
+  script: 
+    # - yarn unit
+    # - yarn integration
+    - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
+    - docker load --input api.tar
+    - docker load --input client.tar
+    - yarn e2e
+integration:
+  stage: test
+  before_script:
+    - echo 'Skipping login'
+  services:
+    - docker:18.06.3-dind
+  dependencies:
+    - build api
+  script: 
+    # - yarn unit
+    # - yarn integration
+    - docker load --input api.tar
+    - yarn integration
+unit:
+  stage: test
+  before_script:
+    - echo 'Skipping login'
+  services:
+    - docker:18.06.3-dind
+  dependencies:
+    - build client
+  script: 
+    # - yarn unit
+    # - yarn integration
+    - docker load --input client.tar
+    - yarn unit
+lint:
+  stage: test
+  before_script:
+    - echo 'Skipping login'
+  dependencies:
+    - dependencies
+  script: 
+    - yarn lint
+
 deploy:
   stage: deploy
   services:
