--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ build api:
   script: 
     - ls -al
     - '[ -f ./api.tar ] && docker load --input api.tar'
-    - docker build -t api:latest -f server/Dockerfile --cache-from api:latest --cache-from node:12-alpine . --target=dev
+    - docker build -t api:latest -f server/Dockerfile --cache-from api:latest --cache-from node:12-alpine .
     - docker save api:latest > api.tar
 
 dependencies:
@@ -139,10 +139,14 @@ unit:
     - yarn unit
 lint:
   stage: test
+  image: node:12-slim
   before_script:
     - echo 'Skipping login'
-  dependencies:
-    - dependencies
+  cache:
+    key: npm-1
+    policy: pull
+    paths: 
+      - node_modules
   script: 
     - yarn lint
 
