--- a/.env.ci
+++ b/.env.ci
@@ -12,3 +12,6 @@ CDN_DOMAIN=photos.local.carpedalan.com
 ASSET_CDN_DOMAIN=cdn.local.carpedalan.com
 DOMAIN=local.carpedalan.com
 SKIP_CF=true
+CLOUDFRONT_KEY_ID=asdf
+AWS_ACCESS_KEY_ID=asdf
+AWS_SECRET_ACCESS_KEY=asdf
