--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,8 +109,8 @@ e2e:
   script: 
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker load --input api.tar
-    - docker load --input client.tar
-    - docker-compose -f docker-compose.e2e.yml up
+    - copy -av dist client/dist
+    - yarn e2e
 
 integration:
   stage: test
