--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,7 +109,8 @@ e2e:
   script: 
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker load --input api.tar
-    - yarn e2e
+    # - yarn e2e
+    - COMPOSE_PROJECT_NAME=cd_e2e docker-compose -f docker-compose.e2e.yml up
 
 integration:
   stage: test
