--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -15,9 +15,9 @@ services:
     image: registry.gitlab.com/carpedalan/carpedalan-web/cypress:latest
     depends_on:
       api: 
-        condition: service_healthy
+        condition: service_started
       alb: 
-        condition: service_healthy
+        condition: service_started
     command: yarn test
     volumes: 
       - ./cypress:/cy/cypress
@@ -36,7 +36,7 @@ services:
 
     depends_on:
       api: 
-        condition: service_healthy
+        condition: service_started
       aws: 
         condition: service_started
     ports:
@@ -60,7 +60,7 @@ services:
       - './.env.ci:/app/.env'
     depends_on:
       pg:
-        condition: service_healthy
+        condition: service_started
 
     environment:
       PORT: 8001
