--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,8 @@ default:
     - pulumi stack select dev
 
 build client:
+  tags: 
+    - leif
   image: docker:18.06.3
   before_script:
     - echo 'Skipping login'
@@ -40,6 +42,9 @@ build client:
     - docker save client:latest > client.tar
 
 build api:
+  tags: 
+    - leif
+
   image: docker:18.06.3
   before_script:
     - echo 'Skipping login'
@@ -61,6 +66,9 @@ build api:
     - docker save api:latest > api.tar
 
 dependencies:
+  tags: 
+    - leif
+
   before_script:
     - echo 'Skipping login'
   stage: build
@@ -86,6 +94,9 @@ dependencies:
 #       - app.tar
 
 build layer deps:
+  tags: 
+    - leif
+
   stage: build
   services:
     - docker:18.06.3-dind
@@ -98,6 +109,9 @@ build layer deps:
       - imageResizer/layer/
   
 e2e:
+  tags: 
+    - leif
+
   stage: test
   before_script:
     - echo 'Skipping login'
@@ -113,6 +127,9 @@ e2e:
     - COMPOSE_PROJECT_NAME=cd_e2e docker-compose -f docker-compose.e2e.yml up
 
 integration:
+  tags: 
+    - leif
+
   stage: test
   before_script:
     - echo 'Skipping login'
@@ -137,6 +154,9 @@ unit:
     - yarn unit
 
 lint:
+  tags: 
+    - leif
+
   stage: test
   image: node:12-slim
   before_script:
@@ -151,6 +171,9 @@ lint:
     - yarn lint
 
 deploy:
+  tags: 
+    - leif
+
   stage: deploy
   services:
   - docker:18.06.3-dind
