--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -99,7 +99,7 @@ services:
     command: yarn migrate
   sam:
     build: 
-      context: ./imageresizer
+      context: ./imageResizer
       dockerfile: Dockerfile
     command: ["$PWD"]
     volumes:
