--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,11 @@ services:
     extends:
       file: docker-compose.base.yml
       service: sam
+    environment: 
+      DEBUG_SAM: "${DEBUG_SAM-}"
+      COMPOSE_PROJECT_NAME: ${COMPOSE_PROJECT_NAME-cd}
+    ports:
+      - "3001:3001"
       
 
   aws:
