--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
     "typescript": "^3.7.4"
   },
   "dependencies": {
-    "@pulumi/aws": "^1.21.0",
-    "@pulumi/awsx": "^0.19.2",
-    "@pulumi/pulumi": "^1.10.1",
+    "@pulumi/aws": "1.18.0",
+    "@pulumi/awsx": "0.18.14",
+    "@pulumi/pulumi": "1.8.1",
     "rimraf": "^3.0.1"
   },
   "optionalDependencies": {
