--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -112,12 +112,25 @@ http {
     server {
         listen 443;
         server_name cdn.local.carpedalan.com;
+
         location /report.html {     
             root /assets;
         }
-        location / {     
+        location ~* \.(js)$ {
             add_header  Content-Encoding  gzip;  
             root /assets;
+        }
+        location ~* \.(eot|ttf|woff|woff2)$ {
+            root /public;
+            add_header 'Access-Control-Allow-Origin' "*" always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+
+        }
+        location / {     
+            add_header Access-Control-Allow-Origin *;
+            root /public;
         }
         ssl_certificate /etc/ssl/certs/local.carpedalan.com.pem;
         ssl_certificate_key /etc/ssl/private/local.carpedalan.com-key.pem;
