Added dll config to webpack dev

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,6 +6,8 @@ RUN yarn
 COPY client/src ./src
 COPY client/tsconfig.json .
 COPY client/webpack.config.js .
+COPY client/webpack.config.dll.js .
+RUN yarn webpack --config webpack.config.dll.js
 COPY client/webpack.config.prod.js .
 COPY client/babel.config.js .
 COPY client/devServer.js .
