--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -253,6 +253,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme; 
             proxy_pass http://client-app;
         }
+        location /build {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme; 
+            proxy_pass http://client-app;
+        }
+
         location /docs/ {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
