--- a/client/package.json
+++ b/client/package.json
@@ -8,18 +8,17 @@
     "clean": "rm -rf dist",
     "lint": "eslint .",
     "test": "jest",
-    "lint:css":"stylelint './src/**/*.tsx'"
+    "lint:css": "stylelint './src/**/*.tsx'"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
     "@babel/core": "^7.8.4",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/polyfill": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
+    "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
-
     "@testing-library/jest-dom": "^5.1.1",
     "axios": "^0.19.2",
     "compression-webpack-plugin": "^3.1.0",
@@ -80,6 +79,7 @@
     "@typescript-eslint/parser": "^2.19.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-macros": "^2.8.0",
     "babel-preset-jest": "^25.1.0",
     "compression-webpack-plugin": "^3.1.0",
     "enzyme": "^3.11.0",
