--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "stop": "docker stop $(docker ps -a -q)",
     "e2e": "COMPOSE_PROJECT_NAME=cd_e2e docker-compose -f docker-compose.e2e.yml run --rm cypress yarn cypress run",
     "test": "yarn build && yarn unit && yarn integration && yarn e2e && yarn stop",
-    "ci": "yarn lint && yarn build && yarn test && ./scripts/development/buildForDeploy.sh" 
+    "ci": "yarn lint && yarn build && yarn test && ./scripts/development/buildForDeploy.sh",
+    "reload": "docker-compose exec alb nginx -s reload"
   },
   "author": "",
   "license": "ISC",
