--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
     "build": "BABEL_ENV=production NODE_ENV=production yarn webpack --mode production --config webpack.prod.js",
     "migrateAndSeed": "MIGRATING=true ./scripts/migrateAndSeed.sh",
     "migrate": "MIGRATING=true ./scripts/migrate.sh",
-    "migrateAndStart": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
+    "migrateAndStart": "MIGRATING=true yarn migrateAndSeed && DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon -L --inspect=0.0.0.0 .",
     "start": "DEBUG=knex*,-knex:client,-knex:connection,-knex:pool nodemon --inspect=0.0.0.0 .",
     "start:prod": "MIGRATING=true NODE_ENV=production ./scripts/migrate.sh && NODE_ENV=production node .",
     "u": "docker-compose up",
@@ -58,21 +58,20 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-preset-jest": "^24.9.0",
     "codecov": "^3.3.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "babel-plugin-dynamic-import-node": "^2.3.0",
-    "babel-preset-jest": "^24.9.0",
-    "@babel/core": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-import": "^2.17.1",
     "eslint-plugin-jest": "^22.11.1",
     "eslint-plugin-prettier": "^3.0.1",
     "jest": "^24.7.1",
     "json-schema-to-typescript": "^6.1.3",
-    "nodemon": "^1.18.11",
+    "nodemon": "^2.0.2",
     "openapi-response-validator": "^3.7.0",
     "prettier": "^1.17.0",
     "prettier-eslint": "^8.8.2",
@@ -88,9 +87,9 @@
     "connect-pg-simple": "^5.0.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
-    "date-fns": "2.0.0-alpha.26",
+    "date-fns": "2.9.0",
     "dotenv-safe": "^6.1.0",
-    "esm": "^3.2.22",
+    "esm": "^3.2.25",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.2",
     "express-openapi": "^4.5.0",
