--- a/client/package.json
+++ b/client/package.json
@@ -107,6 +107,7 @@
     "stylelint": "^13.1.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-order": "^4.0.0",
     "stylelint-processor-styled-components": "^1.9.0",
     "ts-jest": "^25.2.0",
     "typedoc": "^0.16.9",
