Fixed hooks dependencies.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
     extends:
       file: docker-compose.base.yml
       service: pg
+    ports: 
+      - 5432:5432
 
   sam:
     extends:
