Added Client TS generation + deploy stuff * Added script to change TS client * Updated client code to use it * Removed NAT GATEWAYS!!!! This required VPC endpoints * Created new stack * Added Name to tags util

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - 443:443
     volumes:
       - ./public:/public/
+      - ./client/dist:/assets/
 
 
   api:
@@ -26,6 +27,7 @@ services:
       - './server:/app/server:delegated'
       - './client/dist:/app/server/dist'
       - './client/src/swaggerSchema.d.ts:/app/swaggerSchema.d.ts'
+      - './client/src/ApiClient.ts:/app/ApiClient.ts'
       - './scripts:/app/scripts:delegated'
       - './index.js:/app/index.js:delegated'
       - './db:/app/db:delegated'
