--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "./client"
   ],
   "engines": {
-    "node": "10.13.0",
+    "node": ">12.0.0 <12.11.0",
     "yarn": "1.21.1"
   },
   "engineStrict": true,
@@ -66,7 +66,7 @@
   "dependencies": {
     "@pulumi/aws": "1.18.0",
     "@pulumi/awsx": "0.18.14",
-    "@pulumi/pulumi": "1.8.1",
+    "@pulumi/pulumi": "1.11.1",
     "rimraf": "^3.0.1"
   },
   "optionalDependencies": {
