--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -117,10 +117,16 @@ http {
             root /assets;
         }
         location ~* \.(js)$ {
+            access_log off;
+            log_not_found off;
+            expires max;
             add_header  Content-Encoding  gzip;  
             root /assets;
         }
         location ~* \.(eot|ttf|woff|woff2)$ {
+            access_log off;
+            log_not_found off;
+            expires max;
             root /public;
             add_header 'Access-Control-Allow-Origin' "*" always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
@@ -288,7 +294,20 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme; 
             proxy_pass http://node-app;
         }
+        location /v1/refresh/ {
+            access_log off;
+            log_not_found off;
+            expires max;
+            gzip on;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme; 
+            proxy_pass http://node-app;
+        }
         location /__webpack_hmr {
+            access_log off;
+            log_not_found off;
+            expires max;
             proxy_pass http://client-app;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
