Added redis to docker files

--- a/docker-compose.e2e.yml
+++ b/docker-compose.e2e.yml
@@ -74,5 +74,11 @@ services:
     extends:
       file: docker-compose.base.yml
       service: aws
+  redis:
+    extends:
+      file: docker-compose.base.yml
+      service: redis
+
+
 
 
