--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "name": "carpedalan-client-app",
   "version": "1.0.0",
   "scripts": {
-    "build:prod": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' NODE_ENV=production webpack --config webpack.config.prod.js --mode=production",
+    "build:prod": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' NODE_ENV=production BABEL_ENV=production webpack --config webpack.config.prod.js --mode=production",
     "build": "TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\"}' webpack --config webpack.config.js --mode=development",
     "clean": "rm -rf dist",
     "lint": "eslint .",
@@ -11,7 +11,7 @@
     "lint:css": "stylelint './src/**/*.tsx'"
   },
   "dependencies": {
-    "@babel/core": "^7.8.4",
+    "@babel/core": "^7.8.6",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -20,25 +20,30 @@
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@testing-library/jest-dom": "^5.1.1",
+    "@types/react-window-infinite-loader": "^1.0.2",
     "axios": "^0.19.2",
+    "babel-plugin-styled-components": "^1.10.7",
+    "brotli-webpack-plugin": "^1.1.0",
     "compression-webpack-plugin": "^3.1.0",
-    "date-fns": "2.9.0",
+    "core-js": "^3.6.4",
+    "date-fns": "2.10.0",
     "debug": "^4.1.1",
+    "history": "^5.0.0-beta.5",
     "lodash": "^4.17.15",
     "qs": "^6.9.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-is": "^16.12.0",
-    "react-router": "^5.1.2",
-    "react-router-dom": "^5.1.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-is": "^16.13.0",
+    "react-router": "^6.0.0-alpha.2",
+    "react-router-dom": "^6.0.0-alpha.2",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "react-window-infinite-loader": "^1.0.5",
     "styled-components": "^5.0.1",
     "ts-loader": "^6.2.1",
-    "tslib": "^1.11.0",
-    "typescript": "^3.8.2",
-    "webpack": "^4.41.6",
+    "tslib": "^1.11.1",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.0",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-middleware": "^3.7.2",
@@ -47,21 +52,22 @@
     "webpack-manifest-plugin": "^2.2.0",
     "webpack-s3-plugin": "^1.0.3",
     "webpack-stats-plugin": "^0.3.1",
-    "webpack-stylish": "^0.1.8"
+    "webpack-stylish": "^0.1.8",
+    "webpack-visualizer-plugin": "^0.1.11"
   },
   "devDependencies": {
-    "@hot-loader/react-dom": "^16.11.0",
-    "@testing-library/react": "^9.4.0",
+    "@hot-loader/react-dom": "^16.12.0",
+    "@testing-library/react": "^9.5.0",
     "@types/debug": "^4.1.5",
     "@types/enzyme": "^3.10.5",
-    "@types/express": "^4.17.2",
+    "@types/express": "^4.17.3",
     "@types/extract-text-webpack-plugin": "^3.0.4",
     "@types/html-webpack-plugin": "^3.2.2",
     "@types/jest": "^25.1.3",
     "@types/lodash": "^4.14.149",
     "@types/long": "^4.0.1",
     "@types/qs": "^6.9.1",
-    "@types/react": "^16.9.22",
+    "@types/react": "^16.9.23",
     "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.15",
     "@types/react-router": "^5.1.4",
@@ -69,14 +75,14 @@
     "@types/react-test-renderer": "^16.9.2",
     "@types/react-virtualized-auto-sizer": "^1.0.0",
     "@types/react-window": "^1.8.1",
-    "@types/styled-components": "^5.0.0",
+    "@types/styled-components": "^5.0.1",
     "@types/superagent": "^4.1.7",
-    "@types/webpack": "^4.41.6",
-    "@types/webpack-dev-middleware": "^2.0.3",
+    "@types/webpack": "^4.41.7",
+    "@types/webpack-dev-middleware": "^3.7.0",
     "@types/webpack-env": "^1.15.1",
     "@types/webpack-hot-middleware": "^2.25.0",
-    "@typescript-eslint/eslint-plugin": "^2.20.0",
-    "@typescript-eslint/parser": "^2.20.0",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
     "babel-jest": "^25.1.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-macros": "^2.8.0",
@@ -91,14 +97,14 @@
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jest": "^23.7.0",
+    "eslint-plugin-jest": "^23.8.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
-    "eslint-plugin-react-hooks": "^2.4.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "eslint-webpack-plugin": "^0.1.0",
     "express": "^4.17.1",
-    "fork-ts-checker-webpack-plugin": "^4.0.4",
+    "fork-ts-checker-webpack-plugin": "^4.0.5",
     "happypack": "^5.0.1",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
@@ -110,7 +116,7 @@
     "stylelint-order": "^4.0.0",
     "stylelint-processor-styled-components": "^1.10.0",
     "ts-jest": "^25.2.1",
-    "typedoc": "^0.16.10",
+    "typedoc": "^0.16.11",
     "typescript-styled-plugin": "^0.15.0"
   }
 }
