Added a bunch of styles

--- a/.env.ci
+++ b/.env.ci
@@ -4,9 +4,9 @@ SESSION_SECRET=farts
 PG_HOST=pg
 PG_USER=postgres
 PG_PASSWORD=postgres
-PG_DATABASE=carpedalan
+PG_DATABASE=postgres
 PG_PORT=5432
-PG_URI=postgres://postgres:postgres@pg:5432/carpedalan
+PG_URI=postgres://postgres:postgres@pg:5432/postgres
 PORT=80
 CDN_DOMAIN=photos.local.carpedalan.com
 ASSET_CDN_DOMAIN=cdn.local.carpedalan.com
