--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-is": "^16.13.0",
     "react-router": "^6.0.0-alpha.2",
     "react-router-dom": "^6.0.0-alpha.2",
+    "react-swipeable": "^5.5.1",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.8.5",
     "react-window-infinite-loader": "^1.0.5",
